# PyNucleus-Model

./: .dockerignore  .env.optimized  .gitignore  CLI_COMPONENTS_BREAKDOWN.md  CLI_README.md  Capstone Project.ipynb  Capstone_Project_Clean.ipynb  DASHBOARD_QUICKSTART.md  DEPLOYMENT_GUIDE.md  Developer_Notebook.ipynb  Developer_Notebook_Clean.ipynb  ENHANCED_PIPELINE_SUMMARY.md  FIXES_IMPLEMENTED.md  Fixes.txt  Future_log.txt  PyNucleus.md  README.md  SYSTEM_DOCUMENTATION.md  TROUBLESHOOTING.md  activate_and_run.sh  analyze_chunks.py  capstone_project.ipynb  capture_flask_issue.py  comprehensive_stats_test.json  comprehensive_system_diagnostic.py  config_template.env  data_chuncking.py  data_processor.py  deployment_summary_20250630_145536.json  diagnose_system.py  document_processor.py  dwsim_test.py  dwsim_workflow.py  faiss_manager.py  improvement.md  performance_analyzer.py  pynucleus  pynucleus.db  pyproject.toml  rag_metrics_enhanced_evaluation_20250622_185607.json  (+23 more)
Chuncked_Data/: chunked_data_content.txt  chunked_data_full.json  chunked_data_stats.json
automation_tools/: run_intel_system.py  sim_to_csv.py  system_diagnostic.py  test_dwsim.py  test_dwsim_integration.py
chroma_db/: chroma.sqlite3
chunk_reports/: faiss_analysis_20250610_011345.txt  faiss_analysis_20250610_011713.txt  faiss_analysis_20250610_011731.txt  faiss_analysis_20250610_012518.txt
config/: custom_simulations_demo.json  simulation_config_template.csv  simulation_config_template.json
configs/: bulk_modular_plants_template.csv  bulk_modular_plants_template.json  config_template.env  dev_simulation_config.csv  dev_simulation_config.json  development_config.json  logging.yaml  mock_data_config.json  mock_data_modular_plants.json  my.json  perf_test.json  production_config.json  sample.env  simulation_config_template.json  system_diagnostic_test.csv  testing_config.json
converted_chunked_data/: chunked_data_content.txt  chunked_data_full.json  chunked_data_stats.json
converted_to_txt/: Manuscript Draft_Can Modular Plants Lower African Industrialization Barriers.txt  sample_document.txt
core_modules/: __init__.py
data/: mock_templates.json  product_prices.json
data_sources/: en_wikipedia_org_wiki_Modular_design.txt  web_scraped_mcp_data.txt  wikipedia_industrial_design.txt  wikipedia_modular_design.txt  wikipedia_software_architecture.txt  wikipedia_supply_chain.txt  wikipedia_system_design.txt
docker/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.model  Dockerfile.scaling  build.sh  docker-compose.production.yml  docker-compose.scale.yml  docker-compose.yml  model_server.py  nginx-production.conf  nginx.conf  requirements_simple.txt  simple_model_server.py
docker_config/: Dockerfile  docker-compose.yml
docs/: COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  Capstone Project.ipynb  DSPY_WORKFLOW.md  ENHANCED_PIPELINE_SUMMARY.md  GOLDEN_DATASET_VALIDATION_GUIDE.md  MODEL_CONFIGURATION.md  PROJECT_ROADMAP.md  SYSTEM_OVERVIEW.md  USER_ACTIONS.md  VALIDATION_TESTING_REPORT.md  WEB_INTERFACE_GUIDE.md  benchmark_target.md  chunk_demo.py  colab_setup.md  dashboard_implementation_summary.md  dashboard_setup_guide.md  developer_console.md  e2e_validation_questions.csv  source_citation_standard.md  test_faiss_integration.py  troubleshooting.md
dwsim_rag_integration/: README.md  __init__.py  requirements.txt
llm_reports/: llm_ready_simulation_summary_20250610_185731.md  llm_ready_simulation_summary_20250610_190211.md  llm_ready_simulation_summary_20250610_212600.md  llm_ready_simulation_summary_20250610_213032.txt  llm_ready_simulation_summary_20250610_213151.md  llm_ready_simulation_summary_20250610_213236.txt  llm_ready_simulation_summary_20250610_214457.txt  llm_ready_simulation_summary_20250610_214654.md
logs/: diagnostic_report_20250611_004838.txt  diagnostic_report_20250611_011514.txt  diagnostic_report_20250611_013305.txt  diagnostic_report_20250611_013528.txt  diagnostic_report_20250611_013827.txt  diagnostic_report_20250611_181701.txt  diagnostic_report_20250611_181915.txt  diagnostic_report_20250611_182358.txt  diagnostic_report_20250611_182913.txt  diagnostic_report_20250611_183453.txt  diagnostic_report_20250611_184630.txt  diagnostic_report_20250611_213540.txt  diagnostic_report_20250611_214347.txt  diagnostic_report_20250611_220156.txt  diagnostic_report_20250611_220443.txt  diagnostic_report_20250611_225409.txt  diagnostic_report_20250612_163754.txt  diagnostic_report_20250612_164154.txt  diagnostic_report_20250613_180520.txt  diagnostic_report_20250613_180907.txt  diagnostic_report_20250613_185101.txt  diagnostic_report_20250613_185515.txt  diagnostic_report_20250613_190451.txt  diagnostic_report_20250613_212148.txt  diagnostic_report_20250613_212239.txt  diagnostic_report_20250613_213125.txt  diagnostic_report_20250613_213147.txt  diagnostic_report_20250613_213706.txt  diagnostic_report_20250613_221422.txt  diagnostic_report_20250613_221739.txt  diagnostic_report_20250613_222654.txt  diagnostic_report_20250613_222846.txt  diagnostic_report_20250613_223357.txt  diagnostic_report_20250613_223855.txt  diagnostic_report_20250613_224818.txt  diagnostic_report_20250613_231331.txt  diagnostic_report_20250613_231418.txt  diagnostic_report_20250613_231904.txt  diagnostic_report_20250617_215819.txt  diagnostic_report_20250617_220244.txt  (+68 more)
processed_txt_files/: 1-s2.0-S0925527302003742-main.txt  Bist_Madan.txt  Manuscript Draft_Can Modular Plants Lower African Industrialization Barriers.txt  feasibility_factors.txt  mcp_basics.txt
project_info/: DIRECTORY_RENAME_SUMMARY.md  PROJECT_STRUCTURE.md
prompt_templates/: qwen_prompt.j2
prompts/: README.md  notebook_integration.py  prompt_system.py  qwen_prompt.j2
rag-dwsim-demo/: Dockerfile  dwsim_test.py
results/: dwsim_simulation_results.csv  dwsim_statistics.csv  dwsim_summary.csv  financial_analysis_20250610_174157.csv  financial_analysis_20250610_213236.csv  integrated_dwsim_rag_results_20250610_174152.json  integrated_dwsim_rag_results_20250610_185731.json  integrated_dwsim_rag_results_20250610_212600.json  pipeline_summary.csv  (+5 more)
(+428 files in other folders)
