[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynucleus"
dynamic = ["version"]
description = "Chemical process simulation and RAG system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyNucleus Contributors"}
]
maintainers = [
    {name = "PyNucleus Contributors"}
]
keywords = ["chemical", "simulation", "rag", "dwsim", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.1",
    "transformers>=4.58.0",
    "sentence-transformers>=3.3.0",
    "huggingface-hub>=0.27.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=1.2.0",
    "chromadb>=1.0.16",
    "faiss-cpu>=1.9.0",
    "rank-bm25>=0.2.2",
    "langchain>=0.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "jsonschema>=4.23.0",
    "typing-extensions>=4.12.0",
    "PyYAML>=6.0.2",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "loguru>=0.7.3",
    "structlog>=24.5.0",
    "tqdm>=4.67.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "psutil>=6.1.0",
    "tabulate>=0.9.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "PyMuPDF>=1.25.0",
    "Pillow>=11.0.0",
    "camelot-py>=1.0.0",
    "opencv-python>=4.10.0",
    "scikit-learn>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
pynucleus = "pynucleus.cli:main"

[project.urls]
Homepage = "https://github.com/mohammadalmusaiteer/PyNucleus-Model"
Repository = "https://github.com/mohammadalmusaiteer/PyNucleus-Model"
Issues = "https://github.com/mohammadalmusaiteer/PyNucleus-Model/issues"

[tool.setuptools.dynamic]
version = {attr = "pynucleus.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pynucleus = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["src/pynucleus/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "G", "PIE", "T20", "Q"]
ignore = ["E501", "E203"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"src/pynucleus/tests/*" = ["T201"]
